--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,23 @@
 body {
     color: red;
 }
+
+#container {
+    display: grid;
+    height: 50vh;
+    width: 50vh;
+    justify-items: center;
+    align-items: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+.box {
+    display: flex;
+    flex: 1;
+    height: 10rem;
+    width: 10rem;
+    margin: 0;
+    padding: 0;
+    border: 1px solid black;
+}
