--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,34 @@
 body {
     color: red;
 }
-
 #container {
+    border: 1px solid black;
     display: grid;
-    height: 50vh;
-    width: 50vh;
-    justify-items: center;
-    align-items: center;
+    height: 45vh;
+    width: 45vw;
+    min-width: 420px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .box {
-    display: flex;
-    flex: 1;
-    height: 10rem;
-    width: 10rem;
+    height: 15vh;
+    width: 15vw;
+    min-width: 140px;
     margin: 0;
     padding: 0;
     border: 1px solid black;
+}
+
+#startBtn {
+    width: 6vw;
+    height: 3vh;
+    color: black;
+}
+
+#header {
+    display: flex;
+    justify-content: center;
 }
