--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,16 @@
 body {
-    color: red;
+
 }
+
+#introContainer {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 #container {
-    border: 1px solid black;
     display: grid;
     height: 45vh;
     width: 45vw;
@@ -11,6 +19,7 @@ body {
     grid-template-rows: 1fr 1fr 1fr;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 2rem;
 }
 
 .box {
@@ -22,10 +31,16 @@ body {
     border: 1px solid black;
 }
 
+.box:hover {
+    cursor: crosshair;
+}
+
 #startBtn {
     width: 6vw;
     height: 3vh;
     color: black;
+    min-height: 22px;
+    min-width: 44px;
 }
 
 #header {
@@ -34,11 +49,24 @@ body {
 }
 
 #textBox {
+    border: 1px solid black;
     overflow-y: scroll;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0.5rem 3rem;
     height: 20vh;
-    padding: 10rem;
     display: flex;
     flex-direction: column;
+    min-width: 20rem;
+
+}
+
+.text {
+    margin: .3rem;
+}
+
+#appContainer {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
 }
